--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.initialization-mode=always
 
-spring.datasource.url = jdbc:mysql://${G17_DB_HOST}:${G17_DB_PORT}/${G17_DB_NAME}
+spring.datasource.jdbc-url = jdbc:mysql://${G17_DB_HOST}:${G17_DB_PORT}/${G17_DB_NAME}
 spring.datasource.username = ${G17_DB_USER}
 spring.datasource.password = ${G17_DB_PASSWORD}
