--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url = jdbc:mysql://${G17_DB_HOST}:${G17_DB_PORT}/${G17_DB_NAME}
+spring.datasource.username = ${G17_DB_USER}
+spring.datasource.password = ${G17_DB_PASSWORD}
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hellypatel251998@gmail.com
+spring.mail.password=2@May1998
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+spring.http.multipart.enabled=false
