--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.password = ${G17_DB_PASSWORD}
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=hellypatel251998@gmail.com
-spring.mail.password=2@May1998
+spring.mail.username={G17_EMAIL}
+spring.mail.password={G17_EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.servlet.multipart.max-file-size=2MB
